--- a/uaThesisTemplate.sty
+++ b/uaThesisTemplate.sty
@@ -48,7 +48,7 @@
 \newcommand{\JuriMember}[2]{
     \listadd{\ciJuriMember}{\JURI{\JURICATEGORY}{#1}{#2}}
 }
-\newcommand{\Abstract}[4]{\def\ciAbstractText{#4}
+\newcommand{\Abstract}[4]{\def\ciAbstractKeywords{#2}\def\ciAbstractText{#4}
 \listadd{\ciAbstract}{
   \TitlePage
     \vspace*{55mm}
